--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cheerio": "1.0.0-rc.12",
     "next": "^14.2.35",
     "react": "18.3.1",
     "react-dom": "18.3.1"
