Redesign home hero, featured work, and reel

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sync:gallery": "node scripts/sync-gallery.mjs"
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.12",
